--- a/ks.cfg
+++ b/ks.cfg
@@ -99,9 +99,9 @@ php-xml
 %post
 cat <<EOF > /etc/profile.d/proxy.sh
 export http_proxy=http://proxy.houston.hp.com:8080
-export https_proxy=$http_proxy
-export HTTP_PROXY=$http_proxy
-export HTTPS_PROXY=$http_proxy
+export https_proxy=\$http_proxy
+export HTTP_PROXY=\$http_proxy
+export HTTPS_PROXY=\$http_proxy
 EOF
 chmod +x /etc/profile.d/proxy.sh
 echo "proxy=http://proxy.houston.hp.com:8080" >> /etc/yum.conf
